--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(guia1_ej11 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(guia1_ej11 main.c)
+add_executable(guia1_ej11 main.c Inmobiliaria.c Inmobiliaria.h)
